# ==============================================================================
#  CORE PROJECT SWITCHES
# ==============================================================================
option('BUILD_TESTS', 
  type: 'boolean', 
  value: false, 
  description: 'Build local engine validation testing binaries'
)

option('BUILD_BINDINGS', 
  type: 'boolean', 
  value: false, 
  description: 'Trigger automated native multi-language pipeline verification tools'
)

option('TARGET_IOS', 
  type: 'boolean', 
  value: false, 
  description: 'Restrict target architecture specifically to iOS sandboxed environments'
)

# ==============================================================================
#  PLATFORM-SPECIFIC ENGINE FEATURES
# ==============================================================================
option('SRAL_WITH_UIA', 
  type: 'boolean', 
  value: false, 
  description: 'Enable native Windows UI Automation client memory endpoints'
)

option('SRAL_WITH_NSSPEECH', 
  type: 'boolean', 
  value: false, 
  description: 'Enable legacy Apple AppKit Cocoa speech generation framework structures'
)

option('SRAL_WITH_NVDA', 
  type: 'boolean', 
  value: false, 
  description: 'Enable unmanaged external thread injection channels via NVDA Controller'
)

option('SRAL_WITH_SPEECH_DISPATCHER', 
  type: 'boolean', 
  value: false, 
  description: 'Establish dynamic runtime socket connection hooks to Speech Dispatcher'
)

option('SRAL_WITH_ORCA', 
  type: 'boolean', 
  value: false, 
  description: 'Expose local context mappings to shared system D-Bus and AT-SPI routing'
)

option('SRAL_WITH_BRLAPI', 
  type: 'boolean', 
  value: false, 
  description: 'Link unmanaged local BrlAPI socket drivers into the library pipeline'
)

# ==============================================================================
#  DEPLOYMENT & LANGUAGE BINDING HOOKS
# ==============================================================================
option('SRAL_INSTALL_BINDING_SOURCES', 
  type: 'boolean', 
  value: false, 
  description: 'Deploy raw wrapper script templates into system asset directories'
)

option('SRAL_BINDING_CSHARP', 
  type: 'boolean', 
  value: false, 
  description: 'Compile unmanaged C# P/Invoke bridging target definitions'
)

option('SRAL_BINDING_RUST', 
  type: 'boolean', 
  value: false, 
  description: 'Compile unsafe Rust unmanaged FFI crate modules'
)

option('SRAL_BINDING_NODE', 
  type: 'boolean', 
  value: false, 
  description: 'Compile native JavaScript N-API binary interface hooks'
)

option('SRAL_BINDING_GO', 
  type: 'boolean', 
  value: false, 
  description: 'Compile Go runtime CGo allocation wrapper hooks'
)

option('SRAL_BINDING_DART', 
  type: 'boolean', 
  value: false, 
  description: 'Compile Dart/Flutter native integration call paths'
)

option('SRAL_BINDING_LUA', 
  type: 'boolean', 
  value: false, 
  description: 'Compile raw Lua script execution hooks'
)

option('SRAL_BINDING_PYTHON', 
  type: 'boolean', 
  value: false, 
  description: 'Compile native Python binary extension C-API layout hooks'
)
